Changed About Me files -Changed the photo scaling

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                         </p>
                     </div>
                     <div class="about-image">
-                        <img src="assets/images/about-placeholder.jpg" alt="About Me" class="about-img">
+                        <img src="assets/images/about.jpg" alt="About Me" class="about-img">
                     </div>
                 </div>
             </div>
