Tested git commands

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="assets/images/profile-placeholder.jpg" alt="Your Name" class="profile-img">
+                    <img src="assets/images/profile.jpg" alt="Your Name" class="profile-img">
                 </div>
             </div>
         </section>
