Changes made to education.html

--- a/education.html
+++ b/education.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Education - Your Name</title>
+    <title>Education - V S Vishwas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <a href="index.html">Your Name</a>
+                    <a href="index.html">V S Vishwas</a>
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
@@ -288,8 +288,8 @@
                 <p>Interested in research collaboration or academic projects? Let's connect!</p>
                 <div class="contact-links">
                     <a href="mailto:your.email@university.edu" class="contact-btn">📧 Academic Email</a>
-                    <a href="assets/transcript-placeholder.pdf" class="contact-btn">📄 Transcript</a>
-                    <a href="https://scholar.google.com/yourprofile" class="contact-btn">🎓 Google Scholar</a>
+                    <!-- <a href="assets/transcript-placeholder.pdf" class="contact-btn">📄 Transcript</a> -->
+                    <!-- <a href="https://scholar.google.com/yourprofile" class="contact-btn">🎓 Google Scholar</a> -->
                 </div>
             </div>
         </section>
@@ -297,7 +297,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Name. Built with HTML, CSS, and ❤️</p>
+            <p>&copy; 2025 V S Vishwas. Built with HTML, CSS, and ❤️</p>
         </div>
     </footer>
 
